# pygl

./: .gitignore  CMakeLists.txt  README.md  easywheel.py  package.json  package.yml  pyproject.toml  setup.py
.github/workflows/: build-ubuntu.yml  build-windows.yml  build.yml  master-commit.yml  publish.yml
pygl/: buffers.pyi  commands.pyi  context.pyi  debug.pyi  framebuffer.pyi  init.pyi  math.pyi  rendering.pyi  shaders.pyi  sync.pyi  textures.pyi  vertex_array.pyi
pygl_c/: commands.c  context.c  debug.c  debug.h  init.c  module.c  rendering.c  sync.c  sync.h  utility.c  utility.h
pygl_c/buffers/: buffer.c  buffersModule.c  textureBuffer.c
pygl_c/ext/: textureAtlas.h
pygl_c/framebuffer/: attachmentBase.c  attachmentBase.h  framebuffer.c  framebuffer.h  framebufferAttachment.c  framebufferModule.c  renderbufferAttachment.c  textureAttachment.c  textureAttachment.h
pygl_c/math/: plane.c  plane.h  quaternion.c  quaternion.h
pygl_c/shaders/: shader.c  shaderStage.h  shadersModule.c
pygl_c/textures/: texture.c  texture.h  textureSpec.c  textureSpec.h  textureUploadInfo.c  texturesModule.c  uploadInfo.h
pygl_c/vertexArray/: vertexArray.c  vertexArray.h  vertexArrayModule.c  vertexDescriptor.h  vertexInput.c  vertexInput.h
src_c/: commands.c  debug.c  enum.c  enum.h  gl.h  init.c  module.c  module.h  rendering.c  sync.c  utility.c  utility.h
src_c/buffers/: buffer.c  buffer.h  bufferBase.c  bufferBase.h  buffersModule.c  mappedBuffer.c  mappedBuffer.h  textureBuffer.c  textureBuffer.h
src_c/framebuffer/: attachmentBase.c  attachmentBase.h  framebuffer.c  framebuffer.h  framebufferModule.c  renderbufferAttachment.h  textureAttachment.c
src_c/math/: math.c  quaternion.c  quaternion.h
src_c/shaders/: shader.c  shader.h  shaderStage.c  shaderStage.h  shadersModule.c
src_c/textures/: texture.c  texture.h  texture2D.c  texture2D.h  texture2DArray.c  texture2DArray.h  textureBase.c  textureBase.h  textureSpec.c  textureSpec.h  texturesModule.c  uploadInfo.c  uploadInfo.h
src_py/: __init__.py  _bootstrap.py  _types.pyi  buffers.pyi  commands.pyi  debug.pyi  framebuffer.pyi  math.pyi  rendering.pyi  shaders.pyi  textures.pyi  vertex_array.pyi
tests/: conftest.py  test_buffer.py  test_buffers.py  test_framebuffer.py  test_gl_debug.py  test_matrices.py  test_shaders.py  test_textures.py  test_vectors.py
(+23 files in other folders)
