[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygl"
version = "0.0.1"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest",
    "glfw"]

[tool.setuptools]
packages = ["pygl"]

[tool.setuptools.package-dir]
"pygl" = "src_py"

[tool.setuptools.package-data]
"pygl" = ["src_py/py.typed", "src_py/*.pyi"]
